feat/implementação de estrutura e estilo do side bar

--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="src/favicon.ico">
     <link href="styles.css" rel="stylesheet" />
-    <title>Document</title>
+    <link href="css/styles.css" rel="stylesheet" />
+    <title>Doceria Sigle Page</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div id="sidebar" class="sidebar">
+            <div id="sidebar-container" class="sidebar-container">
+                <img src="src/img/stand.png" alt="logo doceria" class="logo-doceria">
+                <h1 class="title-page">Doceria</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#sessao-bemvindo">Bem-Vindo</a></li>
+                        <li><a href="#sessao-sobre">Sobre Nós</a></li>
+                        <li><a href="#sessao-doces1">Doces1</a></li>
+                        <li><a href="#sessao-doces2">Doces2</a></li>
+                        <li><a href="#sessao-doces3">Doces3</a></li>
+                        <li><a href="#sessao-contatos">Entre em Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="content"></div>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
