feat/novas estruturas para as sessões em HTML

--- a/index.html
+++ b/index.html
@@ -28,7 +28,158 @@
                 </nav>
             </div>
         </div>
-        <div class="content"></div>
+        <div class="content">
+            <main>
+                <section id="sessao-bemvindo" class="sessao-bemvindo">
+                    <div class="banner"></div>
+                    <div class="sessao-bemvindo-content">
+                        <h1>Seja Bem vindo a doceria!</h1>
+                        <div class="sessao-minibanner"></div>
+                        <div class="sessao-descricao">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                                rutrum nulla sit amet risus pulvinar feugiat. Phasellus pulvinar metus felis, sed
+                                bibendum
+                                turpis aliquam quis. Donec non lacinia sem. In dignissim orci eget mi sodales faucibus.
+                                Sed
+                                tempor nisi ex, eget efficitur ante congue sit amet. Quisque consectetur at purus nec
+                                interdum. Vestibulum neque mauris, hendrerit eu iaculis id, fermentum sit amet urna.
+                                Duis
+                                convallis arcu et auctor euismod. Duis lectus dui, pellentesque sit amet justo at,
+                                facilisis
+                                scelerisque nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
+                                fames
+                                ac turpis egestas. Sed tortor sem, tincidunt eget congue id, porta et sem. Nam tristique
+                                purus neque, eget vehicula felis sagittis vel. Nulla nec nunc eu est euismod imperdiet.
+                                Etiam a massa eget tellus mollis dapibus. Nullam pellentesque hendrerit ipsum a pretium.
+                            </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                                rutrum nulla sit amet risus pulvinar feugiat. Phasellus pulvinar metus felis, sed
+                                bibendum
+                                turpis aliquam quis. Donec non lacinia sem. In dignissim orci eget mi sodales faucibus.
+                                Sed
+                                tempor nisi ex, eget efficitur ante congue sit amet. Quisque consectetur at purus nec
+                                interdum. Vestibulum neque mauris, hendrerit eu iaculis id, fermentum sit amet urna.
+                                Duis
+                                convallis arcu et auctor euismod. Duis lectus dui, pellentesque sit amet justo at,
+                                facilisis
+                                scelerisque nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
+                                fames
+                                ac turpis egestas. Sed tortor sem, tincidunt eget congue id, porta et sem. Nam tristique
+                                purus neque, eget vehicula felis sagittis vel. Nulla nec nunc eu est euismod imperdiet.
+                                Etiam a massa eget tellus mollis dapibus. Nullam pellentesque hendrerit ipsum a pretium.
+                            </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                                rutrum nulla sit amet risus pulvinar feugiat. Phasellus pulvinar metus felis, sed
+                                bibendum
+                                turpis aliquam quis. Donec non lacinia sem. In dignissim orci eget mi sodales faucibus.
+                                Sed
+                                tempor nisi ex, eget efficitur ante congue sit amet. Quisque consectetur at purus nec
+                                interdum. Vestibulum neque mauris, hendrerit eu iaculis id, fermentum sit amet urna.
+                                Duis
+                                convallis arcu et auctor euismod. Duis lectus dui, pellentesque sit amet justo at,
+                                facilisis
+                                scelerisque nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
+                                fames
+                                ac turpis egestas. Sed tortor sem, tincidunt eget congue id, porta et sem. Nam tristique
+                                purus neque, eget vehicula felis sagittis vel. Nulla nec nunc eu est euismod imperdiet.
+                                Etiam a massa eget tellus mollis dapibus. Nullam pellentesque hendrerit ipsum a pretium.
+                            </p>
+                            <a href="#" class="sessao-bemvindo-btn">Leia Mais</a>
+                        </div>
+                    </div>
+                </section>
+                <section id="sessao-sobre">
+                    <div class="sessao-content">
+                        <h1>Sobre Nós</h1>
+                        <div class="sessao-minibanner"></div>
+                        <div class="sessao-descricao">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                                rutrum nulla sit amet risus pulvinar feugiat. Phasellus pulvinar metus felis, sed
+                                bibendum
+                                turpis aliquam quis. Donec non lacinia sem. In dignissim orci eget mi sodales faucibus.
+                                Sed
+                                tempor nisi ex, eget efficitur ante congue sit amet. Quisque consectetur at purus nec
+                                interdum. Vestibulum neque mauris, hendrerit eu iaculis id, fermentum sit amet urna.
+                                Duis
+                                convallis arcu et auctor euismod. Duis lectus dui, pellentesque sit amet justo at,
+                                facilisis
+                                scelerisque nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
+                                fames
+                                ac turpis egestas. Sed tortor sem, tincidunt eget congue id, porta et sem. Nam tristique
+                                purus neque, eget vehicula felis sagittis vel. Nulla nec nunc eu est euismod imperdiet.
+                                Etiam a massa eget tellus mollis dapibus. Nullam pellentesque hendrerit ipsum a pretium.
+                            </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                                rutrum nulla sit amet risus pulvinar feugiat. Phasellus pulvinar metus felis, sed
+                                bibendum
+                                turpis aliquam quis. Donec non lacinia sem. In dignissim orci eget mi sodales faucibus.
+                                Sed
+                                tempor nisi ex, eget efficitur ante congue sit amet. Quisque consectetur at purus nec
+                                interdum. Vestibulum neque mauris, hendrerit eu iaculis id, fermentum sit amet urna.
+                                Duis
+                                convallis arcu et auctor euismod. Duis lectus dui, pellentesque sit amet justo at,
+                                facilisis
+                                scelerisque nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
+                                fames
+                                ac turpis egestas. Sed tortor sem, tincidunt eget congue id, porta et sem. Nam tristique
+                                purus neque, eget vehicula felis sagittis vel. Nulla nec nunc eu est euismod imperdiet.
+                                Etiam a massa eget tellus mollis dapibus. Nullam pellentesque hendrerit ipsum a pretium.
+                            </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                                rutrum nulla sit amet risus pulvinar feugiat. Phasellus pulvinar metus felis, sed
+                                bibendum
+                                turpis aliquam quis. Donec non lacinia sem. In dignissim orci eget mi sodales faucibus.
+                                Sed
+                                tempor nisi ex, eget efficitur ante congue sit amet. Quisque consectetur at purus nec
+                                interdum. Vestibulum neque mauris, hendrerit eu iaculis id, fermentum sit amet urna.
+                                Duis
+                                convallis arcu et auctor euismod. Duis lectus dui, pellentesque sit amet justo at,
+                                facilisis
+                                scelerisque nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
+                                fames
+                                ac turpis egestas. Sed tortor sem, tincidunt eget congue id, porta et sem. Nam tristique
+                                purus neque, eget vehicula felis sagittis vel. Nulla nec nunc eu est euismod imperdiet.
+                                Etiam a massa eget tellus mollis dapibus. Nullam pellentesque hendrerit ipsum a pretium.
+                            </p>
+                        </div>
+                    </div>
+                </section>
+                <section id="sessao-doces1">
+                    <h2>Doces 1</h2>
+                    <div id="img1" class="doces1-imgs banner-galeria"></div>
+                    <div id="img2" class="doces1-imgs banner-galeria"></div>
+                    <div id="img3" class="doces1-imgs banner-galeria"></div>
+                    <div id="img4" class="doces1-imgs banner-galeria"></div>
+                    <div id="img5" class="doces1-imgs banner-galeria"></div>
+                </section>
+                <section id="sessao-doces2">
+                    <h2>Doces 1</h2>
+                    <div id="img6" class="doces1-imgs banner-galeria"></div>
+                    <div id="img7" class="doces1-imgs banner-galeria"></div>
+                    <div id="img8" class="doces1-imgs banner-galeria"></div>
+                </section>
+                <section id="sessao-doces3">
+                    <h2>Doces 3</h2>
+                    <div id="img9" class="doces1-imgs banner-galeria"></div>
+                    <div id="img10" class="doces1-imgs banner-galeria"></div>
+                    <div id="img11" class="doces1-imgs banner-galeria"></div>
+                    <div id="img12" class="doces1-imgs banner-galeria"></div>
+                </section>
+                <section id="sessao-contato">
+                    <h2>Contatos</h2>
+                    <form>
+                        <input type="text" name="name" placeholder="Nome">
+                        <input type="email" name="email" placeholder="Email">
+                        <textarea name="message" id="message" cols="30" rows="10"
+                            placeholder="Escreva sua mensagem.."></textarea>
+                        <input type="submit" value="Enviar">
+                    </form>
+                </section>
+                <footer>
+                    <p>evilynAraujo @2023</p>
+                </footer>
+            </main>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
