feat/finalizando o projeto desktop

--- a/index.html
+++ b/index.html
@@ -44,13 +44,6 @@
                                 tempor nisi ex, eget efficitur ante congue sit amet. Quisque consectetur at purus nec
                                 interdum. Vestibulum neque mauris, hendrerit eu iaculis id, fermentum sit amet urna.
                                 Duis
-                                convallis arcu et auctor euismod. Duis lectus dui, pellentesque sit amet justo at,
-                                facilisis
-                                scelerisque nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
-                                fames
-                                ac turpis egestas. Sed tortor sem, tincidunt eget congue id, porta et sem. Nam tristique
-                                purus neque, eget vehicula felis sagittis vel. Nulla nec nunc eu est euismod imperdiet.
-                                Etiam a massa eget tellus mollis dapibus. Nullam pellentesque hendrerit ipsum a pretium.
                             </p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
                                 rutrum nulla sit amet risus pulvinar feugiat. Phasellus pulvinar metus felis, sed
@@ -60,13 +53,6 @@
                                 tempor nisi ex, eget efficitur ante congue sit amet. Quisque consectetur at purus nec
                                 interdum. Vestibulum neque mauris, hendrerit eu iaculis id, fermentum sit amet urna.
                                 Duis
-                                convallis arcu et auctor euismod. Duis lectus dui, pellentesque sit amet justo at,
-                                facilisis
-                                scelerisque nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
-                                fames
-                                ac turpis egestas. Sed tortor sem, tincidunt eget congue id, porta et sem. Nam tristique
-                                purus neque, eget vehicula felis sagittis vel. Nulla nec nunc eu est euismod imperdiet.
-                                Etiam a massa eget tellus mollis dapibus. Nullam pellentesque hendrerit ipsum a pretium.
                             </p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
                                 rutrum nulla sit amet risus pulvinar feugiat. Phasellus pulvinar metus felis, sed
@@ -75,14 +61,6 @@
                                 Sed
                                 tempor nisi ex, eget efficitur ante congue sit amet. Quisque consectetur at purus nec
                                 interdum. Vestibulum neque mauris, hendrerit eu iaculis id, fermentum sit amet urna.
-                                Duis
-                                convallis arcu et auctor euismod. Duis lectus dui, pellentesque sit amet justo at,
-                                facilisis
-                                scelerisque nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
-                                fames
-                                ac turpis egestas. Sed tortor sem, tincidunt eget congue id, porta et sem. Nam tristique
-                                purus neque, eget vehicula felis sagittis vel. Nulla nec nunc eu est euismod imperdiet.
-                                Etiam a massa eget tellus mollis dapibus. Nullam pellentesque hendrerit ipsum a pretium.
                             </p>
                             <a href="#" class="sessao-bemvindo-btn">Leia Mais</a>
                         </div>
@@ -101,13 +79,6 @@
                                 tempor nisi ex, eget efficitur ante congue sit amet. Quisque consectetur at purus nec
                                 interdum. Vestibulum neque mauris, hendrerit eu iaculis id, fermentum sit amet urna.
                                 Duis
-                                convallis arcu et auctor euismod. Duis lectus dui, pellentesque sit amet justo at,
-                                facilisis
-                                scelerisque nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
-                                fames
-                                ac turpis egestas. Sed tortor sem, tincidunt eget congue id, porta et sem. Nam tristique
-                                purus neque, eget vehicula felis sagittis vel. Nulla nec nunc eu est euismod imperdiet.
-                                Etiam a massa eget tellus mollis dapibus. Nullam pellentesque hendrerit ipsum a pretium.
                             </p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
                                 rutrum nulla sit amet risus pulvinar feugiat. Phasellus pulvinar metus felis, sed
@@ -117,13 +88,6 @@
                                 tempor nisi ex, eget efficitur ante congue sit amet. Quisque consectetur at purus nec
                                 interdum. Vestibulum neque mauris, hendrerit eu iaculis id, fermentum sit amet urna.
                                 Duis
-                                convallis arcu et auctor euismod. Duis lectus dui, pellentesque sit amet justo at,
-                                facilisis
-                                scelerisque nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
-                                fames
-                                ac turpis egestas. Sed tortor sem, tincidunt eget congue id, porta et sem. Nam tristique
-                                purus neque, eget vehicula felis sagittis vel. Nulla nec nunc eu est euismod imperdiet.
-                                Etiam a massa eget tellus mollis dapibus. Nullam pellentesque hendrerit ipsum a pretium.
                             </p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
                                 rutrum nulla sit amet risus pulvinar feugiat. Phasellus pulvinar metus felis, sed
@@ -133,13 +97,6 @@
                                 tempor nisi ex, eget efficitur ante congue sit amet. Quisque consectetur at purus nec
                                 interdum. Vestibulum neque mauris, hendrerit eu iaculis id, fermentum sit amet urna.
                                 Duis
-                                convallis arcu et auctor euismod. Duis lectus dui, pellentesque sit amet justo at,
-                                facilisis
-                                scelerisque nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
-                                fames
-                                ac turpis egestas. Sed tortor sem, tincidunt eget congue id, porta et sem. Nam tristique
-                                purus neque, eget vehicula felis sagittis vel. Nulla nec nunc eu est euismod imperdiet.
-                                Etiam a massa eget tellus mollis dapibus. Nullam pellentesque hendrerit ipsum a pretium.
                             </p>
                         </div>
                     </div>
@@ -150,10 +107,10 @@
                     <div id="img2" class="doces1-imgs banner-galeria"></div>
                     <div id="img3" class="doces1-imgs banner-galeria"></div>
                     <div id="img4" class="doces1-imgs banner-galeria"></div>
-                    <div id="img5" class="doces1-imgs banner-galeria"></div>
                 </section>
                 <section id="sessao-doces2">
                     <h2>Doces 1</h2>
+                    <div id="img5" class="doces1-imgs banner-galeria"></div>
                     <div id="img6" class="doces1-imgs banner-galeria"></div>
                     <div id="img7" class="doces1-imgs banner-galeria"></div>
                     <div id="img8" class="doces1-imgs banner-galeria"></div>
@@ -167,7 +124,7 @@
                 </section>
                 <section id="sessao-contato">
                     <h2>Contatos</h2>
-                    <form>
+                    <form id="form-contato">
                         <input type="text" name="name" placeholder="Nome">
                         <input type="email" name="email" placeholder="Email">
                         <textarea name="message" id="message" cols="30" rows="10"
